@@ -3545,3 +3545,4 @@ Start... early ages
   compiling the 192K ROMS. (RFB)
 - desk/deskapp.c: Fix bad desktop display after resolution change in
   192k ROMs (bug introduced by changes of 2012-04-16). (RFB)
+- desk/deskinf.c: Added some warning comments re SFCB. (RFB)
